<resources>
    <string name="app_name">Rutas</string>
    <string name="title_activity_home"></string>

    <string name="title_activity_mapa">Mapa</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- Home -->
    <string name="iniciarSesion_str">Iniciar sesion</string>
    <string name="rutas_str">Rutas</string>
    <string name="modificarRutas_str">Cambios</string>
    <string name="nuevaRuta_str">Agregar ruta</string>
    <string name="programador_str">Programador</string>

    <!-- app_bar_home -->
    <string name="btnRutas_appBarHome">Seleccionar ruta</string>

    <!-- Programador -->
    <string name="tituloProgramador_str">Programador</string>
    <string name="nombre_programadorStr">Irving Romero</string>
    <string name="correo_programadorStr">i.romerog93@gmail.com</string>
    <string name="carrera_programadorStr">Ing. Sistemas Computacionales</string>
    <string name="escuela_programadorStr">Instituto Tecnologico de Mexicali ITM</string>
    <string name="ciudad_programadorStr">Mexicali, Baja California Mexico</string>

    <!-- IniciarSesion -->
    <string name="btnIniciarSesion_Login">Entrar</string>
    <string name="btnRegistrarse_Login">Registrarse</string>
    <string name="txtUsuario_iniciarSesion">Usuario</string>
    <string name="txtContra_iniciarSesion">Contraseña</string>
    <string name="txtCheckbox_iniciarSesion">No cerrar sesion</string>
    <string name="txtNoCuenta_iniciarSesion">¿No tienes cuenta?</string>


</resources>