<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <item
            android:id="@+id/iniciarSesion_home"
            android:icon="@drawable/iniciar_sesion"
            android:title="@string/iniciarSesion_str"/>

    <item
            android:id="@+id/modificarRutas_home"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/modificarRutas_str"/>
    <item
            android:id="@+id/nuevaRuta_home"
            android:icon="@drawable/ic_agregar"
            android:title="@string/nuevaRuta_str"/>

    <item android:title="Communicate">
        <menu>
            <item
                    android:id="@+id/programador"
                    android:icon="@drawable/ic_programador"
                    android:title="@string/programador_str"/>
        </menu>
    </item>

</menu>