<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        tools:context=".Home">

    <android.support.v7.widget.Toolbar
            android:id="@+id/tb_desarrollador"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary">

        <ImageButton
                android:id="@+id/btnAtras_desarrollador"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/back"
                android:backgroundTint="@color/colorPrimary" />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tituloProgramador_str"
                android:textSize="18sp" />
    </android.support.v7.widget.Toolbar>

    <ImageView
            android:paddingLeft="4dp"
            android:id="@+id/foto_desarrollador"
            android:layout_width="145dp"
            android:layout_height="200dp"
            android:src="@drawable/programador"
            android:layout_below="@id/tb_desarrollador"/>

    <TextView
            android:id="@+id/mostrarNombre_desarrollador"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre_programadorStr"
            android:layout_below="@id/tb_desarrollador"
            android:layout_toRightOf="@id/foto_desarrollador"
            android:paddingTop="5dp"
            android:paddingLeft="5dp"/>

    <TextView
            android:id="@+id/mostrarCorreo_desarrollador"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/correo_programadorStr"
            android:layout_toRightOf="@id/foto_desarrollador"
            android:layout_below="@id/mostrarNombre_desarrollador"
            android:paddingLeft="5dp"/>

    <TextView
            android:id="@+id/mostrarCarrera_desarrollador"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/carrera_programadorStr"
            android:layout_below="@id/foto_desarrollador"
            android:paddingTop="5dp"
            android:paddingLeft="5dp"/>

    <TextView
            android:id="@+id/mostrarEscuela_desarrollador"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/escuela_programadorStr"
            android:layout_below="@id/mostrarCarrera_desarrollador"
            android:paddingLeft="5dp"/>

    <TextView
            android:id="@+id/mostrarLugar_desarrollador"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ciudad_programadorStr"
            android:layout_below="@id/mostrarEscuela_desarrollador"
            android:paddingLeft="5dp"/>
</RelativeLayout>