<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Login.IniciarSesion"
        android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">
        <android.support.design.widget.TextInputEditText
                android:id="@+id/etUsuario_inicio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/txtUsuario_iniciarSesion"
                android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">
        <android.support.design.widget.TextInputEditText
                android:id="@+id/etContra_inicio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/txtContra_iniciarSesion"
                android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp">

        <CheckBox
                android:id="@+id/cbMantenerSesion_InicioSesion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtCheckbox_iniciarSesion"
                android:layout_weight="1"
                android:layout_marginTop="5dp" />

        <Button
                android:id="@+id/btnLogin_inicio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnIniciarSesion_Login"
                android:textAllCaps="false"
                android:layout_gravity="center"

                android:layout_weight="1"/>
    </LinearLayout>


    <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"/>

    <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_gravity="center"
            android:background="@color/separacion"
            android:gravity="bottom"/>

    <Button
            android:id="@+id/btnRegistro_inicioSesion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/btnRegistrarse_Login"
            android:textAllCaps="false"
            android:layout_gravity="bottom"/>

</LinearLayout>